<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/mold_tybe_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_circle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_circle_title" />

        <RadioButton
            android:id="@+id/radio_square_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_square_title" />

        <RadioButton
            android:id="@+id/radio_magnification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_magnification_title" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>